
Since 7.x-2.3
Issue #0744272: Fixed sort order of states in Workflow Form was not according to states weight.
Issue #2102409: Fixed some function (calls) did not support multiple field_names.
Issue #2250403: Fixed typo in workflow_access function, leaving Admin UI only accessible for user 1.
Issue #2256607 by chadhester: Added 'bundle' parameter to workflow_get_workflows_by_type().
Issue #2257145 by chadhester: Fixed Empty $wid value in _workflow_get_workflow_creation_sid().
Issue #2259893 by preddy: Fixed incorrectly hidden labels on Workflow Labels page.
Issue #2260183: Fixed errors with Tokens.
Issue #2261375: Fixed Workflow label was replaced by Workflow machine_name in version 2.3
Issue #2260183: Fixed errors with Tokens with entities that existed before Workflow was added to Entity type.
Issue #2265147: Fixed error in workflow_update_7011() during update.php.
Issue #2266077: Added help text on workflow_cleanup page.
Issue #2267115: Fixed No watchdog call when using Workflow Field.
Issue #2270581: Added examples of hook_workflow_(BASE_FORM_ID_)alter() to workflow.api.php.
Issue #2272121: Fixed 'Tokens' warning on page admin/reports/status.
Issue #2269703: Added code to create a workflow programmatically.
Issue #2272761: Fixed wsod in version 2.4-beta1, due to dpm() leftover in tokens.inc.
Issue #2276149: Fixed 'wid' value in Views Export of filter 'Workflow current: Current state' in workflow_views_handler_filter_sid.
Issue #2263561: Added Entity properties + tokens.
Issue #2277751: Added Field Properties for workflow_field.
Issue #2265615: Added Rules Action 'Set a workflow field state' for any entity.
Issue #2277935: Fixed message 'Wrong call to constructor' when rebuilding permission with workflow_access enabled.
Issue #2196247: Added machine_names for WorkflowStates.
Issue #2217291: Removed warnings from workflow_views, when another module was rudely disabled.
Issue #2279241: Fixed json_encode() error by making $workflow property protected.